<resources>

    <string name="action_settings">Settings</string>
    <string name="title_activity_bottom_tab">BottomTabActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="content_description">image view</string>
    <string name="app_name">中医</string>
    <string name="yijian_denglu">一键登录</string>
    <string name="publish">发布</string>
    <string name="integration">积分</string>
    <string name="download">下载</string>
    <string name="about">关于</string>
    <string name="recommend">推荐给朋友</string>
    <string name="set">设置</string>
    <string name="phone_number">手机号码</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="head_image">头像</string>
    <string name="identify">身份</string>
    <string name="weixin">微信</string>
    <string name="area">地区</string>
    <string name="my">我的</string>
    <string name="personal_info">个人资料</string>
    <string name="login_out">退出登录</string>
    <string name="chinese_medicine">药</string>
    <string name="prescription">方</string>
    <string name="meridian_point">经络穴位</string>
    <string name="chinese_patent_medicine">中成药</string>
    <string name="famous_medical_record">名家医案</string>
    <string name="classic_book">经典医书</string>
    <string name="ingredient">食材</string>
    <string name="dose_conversion">剂量转换</string>
    <string name="property_flavor">性味</string>
    <string name="effect">功效</string>
    <string name="three_grade">三品</string>
    <string name="many_look">大家都在看</string>
    <string name="patient_id_card">身份证</string>
    <string name="userlogin">用户登录</string>
    <string name="UserName">用户名</string>
    <string name="UserPasswd">密码</string>
    <string name="FindPasswd">忘记密码？</string>
    <string name="myself_nologin_registered">注册</string>
    <string name="patient_name">姓  名</string>
    <string name="patient_profession">职  业</string>
    <string name="internete_nao_autorizado">internete_nao_autorizado</string>
    <string name="internete_nao_encontrado">internete_nao_encontrado</string>
    <string name="internete_link_redirecionado">internete_link_redirecionado</string>
    <string name="internete_link_offiline">internete_link_offiline</string>
    <string name="internete_link_offiline_other">offiline_other</string>
    <string name="registertitle">用户注册</string>
    <string name="register_username">用户名</string>
    <string name="register_password">密码</string>
    <string name="register_email">邮箱</string>
    <string name="register_nicheng">昵称</string>
    <string name="registersuccess">恭喜！注册成功！</string>
    <string name="login_now">现在登录</string>
</resources>
