<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gray_line"
    tools:context=".fragments.ChineseMedicineListFragment"
    >
    <!-- 标题栏-->
    <RelativeLayout
        android:padding="@dimen/dp_10"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/White_Snow">
        <ImageView
            android:id="@+id/image_back"
            android:scaleType="center"
            android:layout_centerVertical="true"
            android:background="@drawable/back"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_18"
            android:text="@string/chinese_medicine"
            android:textColor="@color/codoon_black_color"/>
        <ImageView
            android:id="@+id/image_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:layout_centerVertical="true"
            android:background="@drawable/back"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <!-- 分割线-->
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_01"
        android:background="@color/grey_8e">

    </View>
    <!-- 分类栏-->
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/White_Snow">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:padding="@dimen/dp_10"
            >
            <TextView
                android:id="@+id/property_flavor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_18"
                android:text="@string/property_flavor"
                android:textColor="@color/codoon_black_color"
                />
            <ImageView
                android:id="@+id/image_xiangshang1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:layout_centerVertical="true"
                android:background="@drawable/xiangshang"/>
        </LinearLayout>
        <view
            android:layout_width="@dimen/dp_01"
            android:layout_height="match_parent"
            android:background="@color/grey_8e">
        </view>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:padding="@dimen/dp_10"
            >
            <TextView
                android:id="@+id/effect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_18"
                android:text="@string/effect"
                android:textColor="@color/codoon_black_color"
                />
            <ImageView
                android:id="@+id/image_xiangshang2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:layout_centerVertical="true"
                android:background="@drawable/xiangshang"/>
        </LinearLayout>
        <view
            android:layout_width="@dimen/dp_01"
            android:layout_height="match_parent"
            android:background="@color/grey_8e">
        </view>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:padding="@dimen/dp_10"
            >
            <TextView
                android:id="@+id/san_pin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_18"
                android:text="@string/three_grade"
                android:textColor="@color/codoon_black_color"
                />
            <ImageView
                android:id="@+id/image_xiangshang3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:layout_centerVertical="true"
                android:background="@drawable/xiangshang"/>
        </LinearLayout>
    </LinearLayout>
    <view
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_01"
    android:background="@color/grey_8e"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/many_look"
        android:background="@color/grey_8e"
        android:textColor="@color/red_light"/>
    <!-- listview-->
    <ListView
        android:id="@android:id/list"
        android:background="@color/White_Snow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/light_grey"
        android:dividerHeight="@dimen/dp_2"
        >

    </ListView>

</LinearLayout>