<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    android:background="@drawable/gray_line"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_18"
        android:text="@string/my"
        android:padding="@dimen/dp_10"
        android:gravity="center_horizontal"
        android:textColor="@color/codoon_black_color"
        android:background="@color/White_Snow"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dp_01"
        android:background="@color/grey_8e">

    </View>
    <ScrollView
        android:id="@+id/scrollview_personal"
        android:scrollbars="none"
        android:layout_marginBottom="@dimen/dp_50"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <!--头像姓名栏-->
            <LinearLayout
                android:id="@+id/user_info"
                android:background="@color/White_Snow"
                android:layout_width="fill_parent"
                android:paddingRight="@dimen/dp_10"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10">
                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginLeft="@dimen/dp_2"
                    android:src="@drawable/default_touxiang"
                    android:scaleType="center"/>
                <LinearLayout
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_weight="1.0">
                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/sp_18"
                        android:text="@string/yijian_denglu"
                        android:textColor="@color/codoon_black_color"
                        />
                    <TextView
                        android:id="@+id/user_identity"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/sp_14"
                        android:textColor="#ff999999"
                        android:maxLines="1"
                        />
                </LinearLayout>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/dp_10"
                    android:background="@drawable/icon_right_arrow_userinfo"
                    />
            </LinearLayout>
            <!-- 发布栏-->
            <LinearLayout
                android:id="@+id/publish"
                android:paddingRight="10.0dip"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/White_Snow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:src="@drawable/publish"
                    android:scaleType="center"/>
                <TextView
                    android:text="@string/publish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_18"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.0"
                    android:textColor="@color/codoon_black_color"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/dp_10"

                    android:background="@drawable/icon_right_arrow_userinfo"
                    />
            </LinearLayout>
            <!-- 积分栏-->
            <LinearLayout
                android:id="@+id/integration"
                android:paddingRight="10.0dip"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/White_Snow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:src="@drawable/integration"
                    android:scaleType="center"/>
                <TextView
                    android:text="@string/integration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_18"
                    android:layout_weight="1.0"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/codoon_black_color"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/dp_10"
                    android:background="@drawable/icon_right_arrow_userinfo"
                    />
            </LinearLayout>
            <!-- 下载栏-->
            <LinearLayout
                android:id="@+id/download"
                android:paddingRight="10.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/White_Snow"
                >
                <ImageView
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:src="@drawable/download"
                    android:scaleType="center"/>
                <TextView
                    android:text="@string/download"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_18"
                    android:layout_weight="1.0"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/codoon_black_color"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/dp_10"
                    android:background="@drawable/icon_right_arrow_userinfo"
                    />
            </LinearLayout>
            <!-- 关于栏-->
            <LinearLayout
                android:id="@+id/about"
                android:paddingRight="10.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/White_Snow"
                android:layout_marginTop="@dimen/dp_10"
                >
                <ImageView
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:src="@drawable/about"
                    android:scaleType="center"/>
                <TextView
                    android:text="@string/about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_18"
                    android:layout_weight="1.0"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/codoon_black_color"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/dp_10"
                    android:background="@drawable/icon_right_arrow_userinfo"
                    />
            </LinearLayout>
            <!-- 推荐栏-->
            <LinearLayout
                android:id="@+id/recommend"
                android:paddingRight="10.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/White_Snow"
                >
                <ImageView
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:src="@drawable/iconfont_tuijian"
                    android:scaleType="center"/>
                <TextView
                    android:text="@string/recommend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_18"
                    android:layout_weight="1.0"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/codoon_black_color"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/dp_10"
                    android:background="@drawable/icon_right_arrow_userinfo"
                    />
            </LinearLayout>
            <!-- 设置栏-->
            <LinearLayout
                android:id="@+id/set"
                android:paddingRight="10.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/White_Snow"
                >
                <ImageView
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:src="@drawable/set"
                    android:scaleType="center"/>
                <TextView
                    android:text="@string/set"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_18"
                    android:layout_weight="1.0"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/codoon_black_color"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/dp_10"
                    android:background="@drawable/icon_right_arrow_userinfo"
                    />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>